--- a/java/build.gradle
+++ b/java/build.gradle
@@ -7,17 +7,16 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'com.google.protobuf'
 
-// mainClassName = "io.grpc.benchmarks.HttpJsonServer"
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 buildscript {
-    ext.kotlin_version = '1.0.3'
-    ext.grpc_version = '1.0.1'
+    ext.kotlin_version = '1.1.0-beta-17'
+    ext.grpc_version = '1.0.3'
 
     repositories {
         mavenCentral()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -27,6 +26,7 @@ buildscript {
 
 repositories {
     mavenCentral()
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
 }
 
 dependencies {
@@ -34,7 +34,6 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-runtime:$kotlin_version"
     compile 'io.reactivex:rxjava:1.1.9'
-    compile "org.json:json:20160810"
     compile "io.grpc:grpc-netty:$grpc_version"
     compile "io.grpc:grpc-protobuf:$grpc_version"
     compile "io.grpc:grpc-stub:$grpc_version"
@@ -44,7 +43,7 @@ dependencies {
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.0.2"
+        artifact = "com.google.protobuf:protoc:3.1.0"
     }
     plugins {
         grpc {
@@ -81,8 +80,8 @@ clean {
 // Let intellij projects refer to generated code
 idea {
     module {
-        sourceDirs += file("${projectDir}/src/generated/main/java");
-        sourceDirs += file("${projectDir}/src/generated/main/grpc");
+        sourceDirs += file("${projectDir}/src/generated/main/java")
+        sourceDirs += file("${projectDir}/src/generated/main/grpc")
     }
 }
 
